# src/api/v1/item/controllers/create.js
@@ -1,12 +1,64 @@
-const { Item } = require("../../../../models");
+const itemService = require("../../../../lib/item");
+/**
+ * Create a new item.
+ *
+ * @param {Object} req - The request object.
+ * @param {Object} res - The response object.
+ * @param {Function} next - The next middleware function.
+ * @returns {void}
+ */
+const create = async (req, res, next) => {
+  const {
+    name,
+    description,
+    released,
+    thumbnail,
+    slug,
+    subcategory,
+    state,
+    cities,
+    price,
+    negotiable,
+    is_argent,
+    brand,
+    publisher,
+  } = req.body;
 
-const createItem = async (req, res) => {
   try {
-    const item = await Item.create(req.body);
-    res.status(201).json({ item });
+    // Validate input data here if needed
+    // ...
+
+    const newItem = await itemService.create({
+      name,
+      description,
+      released,
+      thumbnail,
+      slug,
+      subcategory,
+      state,
+      cities,
+      price,
+      negotiable,
+      is_argent,
+      brand,
+      publisher: req.user.id,
+    });
+
+    const response = {
+      code: 201,
+      message: "Item Created Successfully",
+      data: newItem,
+      links: {
+        self: `/items/${newItem.id}`,
+        author: `/items/${req.user.id}author`,
+        comments: `/items/${newItem.id}/comments`,
+      },
+    };
+
+    res.status(201).json(response);
   } catch (error) {
-    res.status(500).json({ error });
+    next(error);
   }
 };
 
-module.exports = createItem;
+module.exports = create;
